--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
@@ -23,6 +24,7 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prettier": "^3.2.4",
+    "sass": "^1.70.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
