--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "html-to-image": "^1.11.11",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-react-screenshot": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
