--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "html-to-image": "^1.11.11",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "use-react-screenshot": "^4.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
