--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.6.5",
     "html-to-image": "^1.11.11",
     "next": "14.1.0",
+    "notyf": "^3.10.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tooltip": "^5.26.0"
   },
   "devDependencies": {
     "@types/node": "^20",
